// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NameExpressionGenIdBanner with existing data 1`] = `
<div>
  <div
    class="genid-alert alert alert-info"
    role="alert"
  >
    Current genId: 
    124
    <button
      class="pull-right alert-button edit-genid-btn btn btn-primary"
      type="button"
    >
      Edit genId
    </button>
  </div>
</div>
`;

exports[`NameExpressionGenIdBanner without existing data, genId = 1 (0) 1`] = `
<div>
  <div
    class="genid-alert alert alert-info"
    role="alert"
  >
    Current genId: 
    1
    <button
      class="pull-right alert-button edit-genid-btn btn btn-primary"
      type="button"
    >
      Edit genId
    </button>
  </div>
</div>
`;

exports[`NameExpressionGenIdBanner without existing data, genId > 1 1`] = `
<div>
  <div
    class="genid-alert alert alert-info"
    role="alert"
  >
    Current genId: 
    124
    <button
      class="pull-right alert-button edit-genid-btn btn btn-primary"
      type="button"
    >
      Edit genId
    </button>
    <button
      class="pull-right alert-button reset-genid-btn btn btn-primary"
      type="button"
    >
      Reset genId
    </button>
  </div>
</div>
`;
